# RAGLite

./: README.md  Taskfile.yml  pyproject.toml
.raglite/: raglite.db
docs/: architecture.md  chunking.md  diagram.md  inference-backends.md  product-spec.md  sqlite-vector.md  taskfile.md  uv-usage.md
raglite/: chunking.py  cli.py  db.py  deepseek.py  generation.py  ingest.py
